:sparkles: Fixes #75 -- add request and response geo headers
